# mock_exchange

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CMakelists.txt  README.md  conanfile.txt
.github/workflows/: build.yaml
common/: CMakeLists.txt
common/public/utils/: Config.h
gateway/: CMakeLists.txt  CMakelists.txt  FixParser.cpp  FixSbeGateway.cpp  README.md  SbeGateway.cpp  main.cpp  sbe_gateway.cpp
gateway/public/gateway/: FixSbeGateway.h  SbeGateway.h
gateway/public/parser/: FixParser.h  FixSbeDecoder.h  FixSbeEncoder.h  SbeDecoder.h  SbeEncoder.h  order_entry.xml
ledger/: CMakeLists.txt  Ledger.cpp  ledger_main.cpp
ledger/public/ledger/: Ledger.h
matching_engine/: CMakeLists.txt
matching_engine/public/matching/: MatchingEngine.h
message_transport/: CMakeLists.txt  CMakelists.txt  README.md  mpsc_ipc_queue.cpp  spsc_ipc_queue.cpp  test_consumer.cpp  test_producer.cpp
message_transport/benchmark/: CMakeLists.txt  consumer_benchmark.cpp
message_transport/example/: CMakeLists.txt  test_consumer.cpp  test_producer.cpp
message_transport/public/archive/: mpsc_archive.h
message_transport/public/messaging/: SpinPolicy.h  mpsc_ipc_queue.h  mpsc_ipc_queue_element_wrapper.h  mpsc_ipc_queue_headers.h  spsc_ipc_queue.h  spsc_ipc_queue_element_wrapper.h  spsc_ipc_queue_headers.h
message_transport/test/: CMakeLists.txt  CMakelists.txt  mpsc_ipc_queue_test.cpp  spsc_ipc_queue_test.cpp
polling/: CMakeLists.txt
polling/public/polling/: IPollRunner.h  PollableConcept.h  RuntimePollRunner.h  RuntimePollRunnerBuilder.h
sbe_messages/: CMakeLists.txt
